parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UNTIL
    CASE
    DEFINED
    ENSURE
    RETURN
    UNDEF
    MODULE
    DEF
    SUPER
    PSEUDO
    SELF
    UNLESS
    FILE
    REDO
    WHEN
    NIL
    ERROR
    BREAK
    CLASS
    NEXT
    RESCUE
    RETRY
    ALIAS
    LINE
    YIELD

Grammar

Rule 0     S' -> code
Rule 1     code -> expr
Rule 2     code -> if
Rule 3     code -> while
Rule 4     code -> expresiones
Rule 5     code -> for
Rule 6     code -> assign
Rule 7     code -> code code
Rule 8     while -> WHILE logical code END
Rule 9     while -> WHILE logical DO salto code salto END
Rule 10    while -> WHILE logical DOBLEPOINT salto code salto END
Rule 11    while -> BEGIN code END WHILE logical
Rule 12    logical -> term comparison term
Rule 13    logical -> term comparison logical
Rule 14    logical -> variable comparison term
Rule 15    logical -> variable comparison boolean
Rule 16    logical -> logical logcompare logical
Rule 17    logical -> boolean
Rule 18    comparison -> EQUAL
Rule 19    comparison -> NOTEQ
Rule 20    comparison -> GREATHER
Rule 21    comparison -> LOWER
Rule 22    comparison -> GREATHEREQ
Rule 23    comparison -> LOWEREQ
Rule 24    logcompare -> ANDLOG
Rule 25    logcompare -> ORLOG
Rule 26    logcompare -> NOTLOG
Rule 27    logcompare -> AND
Rule 28    logcompare -> OR
Rule 29    logcompare -> NOT
Rule 30    assign -> variable ASS expr
Rule 31    assign -> variable ASS sexpr
Rule 32    assign -> variable ASS array
Rule 33    math -> term arith term
Rule 34    math -> term arith math
Rule 35    math -> variable asig term
Rule 36    variable -> LOCAL
Rule 37    variable -> GLOBAL
Rule 38    variable -> CONSTANTS
Rule 39    variable -> INSTANCEVAR
Rule 40    variable -> CLASSVAR
Rule 41    asig -> ASS
Rule 42    asig -> ADDASS
Rule 43    asig -> SUBASS
Rule 44    asig -> MULASS
Rule 45    asig -> DIVASS
Rule 46    asig -> MODASS
Rule 47    asig -> EXPASS
Rule 48    expr -> math
Rule 49    expr -> term
Rule 50    expr -> sterm
Rule 51    expr -> variable
Rule 52    expr -> slice
Rule 53    expr -> index
Rule 54    sexpr -> sterm MUL term
Rule 55    sexpr -> sterm ADD sexpr
Rule 56    term -> NUMBER
Rule 57    term -> FLOAT
Rule 58    sterm -> STRING
Rule 59    arith -> EXP
Rule 60    arith -> MUL
Rule 61    arith -> DIV
Rule 62    arith -> MOD
Rule 63    arith -> ADD
Rule 64    arith -> SUB
Rule 65    for -> FOR iterador IN expresiones code END
Rule 66    for -> FOR iterador IN expresiones DO code END
Rule 67    for -> FOR iterador IN array code END
Rule 68    for -> FOR iterador IN array DO code END
Rule 69    salto -> NEWLINE
Rule 70    if -> IF logical expr END
Rule 71    if -> IF logical THEN expr END
Rule 72    if -> IF logical
Rule 73    if -> IF logical THEN
Rule 74    if -> if else
Rule 75    if -> if elsif END
Rule 76    else -> ELSE code END
Rule 77    elsif -> ELSIF logical final
Rule 78    final -> code
Rule 79    final -> THEN code
Rule 80    final -> code else
Rule 81    final -> code elsif
Rule 82    iterador -> variable
Rule 83    iterador -> variable COMA variable
Rule 84    expresiones -> term DOUBLESECUENCEPOINT term
Rule 85    array -> LBRACK defarray RBRACK
Rule 86    defarray -> NUMBER
Rule 87    defarray -> NUMBER COMA defarray
Rule 88    defarray -> STRING
Rule 89    defarray -> STRING COMA defarray
Rule 90    defarray -> INT
Rule 91    defarray -> INT COMA defarray
Rule 92    defarray -> FLOAT
Rule 93    defarray -> FLOAT COMA defarray
Rule 94    defarray -> boolean
Rule 95    defarray -> boolean COMA defarray
Rule 96    index -> variable LBRACK INT RBRACK
Rule 97    slice -> variable LBRACK defslice RBRACK
Rule 98    defslice -> INT DOBLEPOINT INT
Rule 99    defslice -> INT DOBLEPOINT
Rule 100   defslice -> DOBLEPOINT INT
Rule 101   boolean -> TRUE
Rule 102   boolean -> FALSE

Terminals, with rules where they appear

ADD                  : 55 63
ADDASS               : 42
ALIAS                : 
AND                  : 27
ANDLOG               : 24
ASS                  : 30 31 32 41
BEGIN                : 11
BREAK                : 
CASE                 : 
CLASS                : 
CLASSVAR             : 40
COMA                 : 83 87 89 91 93 95
CONSTANTS            : 38
DEF                  : 
DEFINED              : 
DIV                  : 61
DIVASS               : 45
DO                   : 9 66 68
DOBLEPOINT           : 10 98 99 100
DOUBLESECUENCEPOINT  : 84
ELSE                 : 76
ELSIF                : 77
END                  : 8 9 10 11 65 66 67 68 70 71 75 76
ENSURE               : 
EQUAL                : 18
ERROR                : 
EXP                  : 59
EXPASS               : 47
FALSE                : 102
FILE                 : 
FLOAT                : 57 92 93
FOR                  : 65 66 67 68
GLOBAL               : 37
GREATHER             : 20
GREATHEREQ           : 22
IF                   : 70 71 72 73
IN                   : 65 66 67 68
INSTANCEVAR          : 39
INT                  : 90 91 96 98 98 99 100
LBRACK               : 85 96 97
LINE                 : 
LOCAL                : 36
LOWER                : 21
LOWEREQ              : 23
MOD                  : 62
MODASS               : 46
MODULE               : 
MUL                  : 54 60
MULASS               : 44
NEWLINE              : 69
NEXT                 : 
NIL                  : 
NOT                  : 29
NOTEQ                : 19
NOTLOG               : 26
NUMBER               : 56 86 87
OR                   : 28
ORLOG                : 25
PSEUDO               : 
RBRACK               : 85 96 97
REDO                 : 
RESCUE               : 
RETRY                : 
RETURN               : 
SELF                 : 
STRING               : 58 88 89
SUB                  : 64
SUBASS               : 43
SUPER                : 
THEN                 : 71 73 79
TRUE                 : 101
UNDEF                : 
UNLESS               : 
UNTIL                : 
WHEN                 : 
WHILE                : 8 9 10 11
YIELD                : 
error                : 

Nonterminals, with rules where they appear

arith                : 33 34
array                : 32 67 68
asig                 : 35
assign               : 6
boolean              : 15 17 94 95
code                 : 7 7 8 9 10 11 65 66 67 68 76 78 79 80 81 0
comparison           : 12 13 14 15
defarray             : 85 87 89 91 93 95
defslice             : 97
else                 : 74 80
elsif                : 75 81
expr                 : 1 30 70 71
expresiones          : 4 65 66
final                : 77
for                  : 5
if                   : 2 74 75
index                : 53
iterador             : 65 66 67 68
logcompare           : 16
logical              : 8 9 10 11 13 16 16 70 71 72 73 77
math                 : 34 48
salto                : 9 9 10 10
sexpr                : 31 55
slice                : 52
sterm                : 50 54 55
term                 : 12 12 13 14 33 33 34 35 49 54 84 84
variable             : 14 15 30 31 32 35 51 82 83 83 96 97
while                : 3

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . expr
    (2) code -> . if
    (3) code -> . while
    (4) code -> . expresiones
    (5) code -> . for
    (6) code -> . assign
    (7) code -> . code code
    (48) expr -> . math
    (49) expr -> . term
    (50) expr -> . sterm
    (51) expr -> . variable
    (52) expr -> . slice
    (53) expr -> . index
    (70) if -> . IF logical expr END
    (71) if -> . IF logical THEN expr END
    (72) if -> . IF logical
    (73) if -> . IF logical THEN
    (74) if -> . if else
    (75) if -> . if elsif END
    (8) while -> . WHILE logical code END
    (9) while -> . WHILE logical DO salto code salto END
    (10) while -> . WHILE logical DOBLEPOINT salto code salto END
    (11) while -> . BEGIN code END WHILE logical
    (84) expresiones -> . term DOUBLESECUENCEPOINT term
    (65) for -> . FOR iterador IN expresiones code END
    (66) for -> . FOR iterador IN expresiones DO code END
    (67) for -> . FOR iterador IN array code END
    (68) for -> . FOR iterador IN array DO code END
    (30) assign -> . variable ASS expr
    (31) assign -> . variable ASS sexpr
    (32) assign -> . variable ASS array
    (33) math -> . term arith term
    (34) math -> . term arith math
    (35) math -> . variable asig term
    (56) term -> . NUMBER
    (57) term -> . FLOAT
    (58) sterm -> . STRING
    (36) variable -> . LOCAL
    (37) variable -> . GLOBAL
    (38) variable -> . CONSTANTS
    (39) variable -> . INSTANCEVAR
    (40) variable -> . CLASSVAR
    (97) slice -> . variable LBRACK defslice RBRACK
    (96) index -> . variable LBRACK INT RBRACK

    IF              shift and go to state 6
    WHILE           shift and go to state 8
    BEGIN           shift and go to state 7
    FOR             shift and go to state 11
    NUMBER          shift and go to state 5
    FLOAT           shift and go to state 14
    STRING          shift and go to state 18
    LOCAL           shift and go to state 12
    GLOBAL          shift and go to state 24
    CONSTANTS       shift and go to state 19
    INSTANCEVAR     shift and go to state 20
    CLASSVAR        shift and go to state 21

    expr                           shift and go to state 1
    slice                          shift and go to state 13
    if                             shift and go to state 2
    expresiones                    shift and go to state 15
    sterm                          shift and go to state 3
    for                            shift and go to state 16
    term                           shift and go to state 17
    code                           shift and go to state 4
    assign                         shift and go to state 23
    math                           shift and go to state 22
    while                          shift and go to state 9
    index                          shift and go to state 10
    variable                       shift and go to state 25

state 1

    (1) code -> expr .

    IF              reduce using rule 1 (code -> expr .)
    WHILE           reduce using rule 1 (code -> expr .)
    BEGIN           reduce using rule 1 (code -> expr .)
    FOR             reduce using rule 1 (code -> expr .)
    NUMBER          reduce using rule 1 (code -> expr .)
    FLOAT           reduce using rule 1 (code -> expr .)
    STRING          reduce using rule 1 (code -> expr .)
    LOCAL           reduce using rule 1 (code -> expr .)
    GLOBAL          reduce using rule 1 (code -> expr .)
    CONSTANTS       reduce using rule 1 (code -> expr .)
    INSTANCEVAR     reduce using rule 1 (code -> expr .)
    CLASSVAR        reduce using rule 1 (code -> expr .)
    END             reduce using rule 1 (code -> expr .)
    NEWLINE         reduce using rule 1 (code -> expr .)
    $end            reduce using rule 1 (code -> expr .)
    ELSE            reduce using rule 1 (code -> expr .)
    ELSIF           reduce using rule 1 (code -> expr .)


state 2

    (2) code -> if .
    (74) if -> if . else
    (75) if -> if . elsif END
    (76) else -> . ELSE code END
    (77) elsif -> . ELSIF logical final

  ! shift/reduce conflict for ELSE resolved as shift
  ! shift/reduce conflict for ELSIF resolved as shift
    IF              reduce using rule 2 (code -> if .)
    WHILE           reduce using rule 2 (code -> if .)
    BEGIN           reduce using rule 2 (code -> if .)
    FOR             reduce using rule 2 (code -> if .)
    NUMBER          reduce using rule 2 (code -> if .)
    FLOAT           reduce using rule 2 (code -> if .)
    STRING          reduce using rule 2 (code -> if .)
    LOCAL           reduce using rule 2 (code -> if .)
    GLOBAL          reduce using rule 2 (code -> if .)
    CONSTANTS       reduce using rule 2 (code -> if .)
    INSTANCEVAR     reduce using rule 2 (code -> if .)
    CLASSVAR        reduce using rule 2 (code -> if .)
    END             reduce using rule 2 (code -> if .)
    NEWLINE         reduce using rule 2 (code -> if .)
    $end            reduce using rule 2 (code -> if .)
    ELSE            shift and go to state 29
    ELSIF           shift and go to state 26

  ! ELSE            [ reduce using rule 2 (code -> if .) ]
  ! ELSIF           [ reduce using rule 2 (code -> if .) ]

    elsif                          shift and go to state 27
    else                           shift and go to state 28

state 3

    (50) expr -> sterm .

    END             reduce using rule 50 (expr -> sterm .)
    IF              reduce using rule 50 (expr -> sterm .)
    WHILE           reduce using rule 50 (expr -> sterm .)
    BEGIN           reduce using rule 50 (expr -> sterm .)
    FOR             reduce using rule 50 (expr -> sterm .)
    NUMBER          reduce using rule 50 (expr -> sterm .)
    FLOAT           reduce using rule 50 (expr -> sterm .)
    STRING          reduce using rule 50 (expr -> sterm .)
    LOCAL           reduce using rule 50 (expr -> sterm .)
    GLOBAL          reduce using rule 50 (expr -> sterm .)
    CONSTANTS       reduce using rule 50 (expr -> sterm .)
    INSTANCEVAR     reduce using rule 50 (expr -> sterm .)
    CLASSVAR        reduce using rule 50 (expr -> sterm .)
    $end            reduce using rule 50 (expr -> sterm .)
    NEWLINE         reduce using rule 50 (expr -> sterm .)
    ELSE            reduce using rule 50 (expr -> sterm .)
    ELSIF           reduce using rule 50 (expr -> sterm .)


state 4

    (0) S' -> code .
    (7) code -> code . code
    (1) code -> . expr
    (2) code -> . if
    (3) code -> . while
    (4) code -> . expresiones
    (5) code -> . for
    (6) code -> . assign
    (7) code -> . code code
    (48) expr -> . math
    (49) expr -> . term
    (50) expr -> . sterm
    (51) expr -> . variable
    (52) expr -> . slice
    (53) expr -> . index
    (70) if -> . IF logical expr END
    (71) if -> . IF logical THEN expr END
    (72) if -> . IF logical
    (73) if -> . IF logical THEN
    (74) if -> . if else
    (75) if -> . if elsif END
    (8) while -> . WHILE logical code END
    (9) while -> . WHILE logical DO salto code salto END
    (10) while -> . WHILE logical DOBLEPOINT salto code salto END
    (11) while -> . BEGIN code END WHILE logical
    (84) expresiones -> . term DOUBLESECUENCEPOINT term
    (65) for -> . FOR iterador IN expresiones code END
    (66) for -> . FOR iterador IN expresiones DO code END
    (67) for -> . FOR iterador IN array code END
    (68) for -> . FOR iterador IN array DO code END
    (30) assign -> . variable ASS expr
    (31) assign -> . variable ASS sexpr
    (32) assign -> . variable ASS array
    (33) math -> . term arith term
    (34) math -> . term arith math
    (35) math -> . variable asig term
    (56) term -> . NUMBER
    (57) term -> . FLOAT
    (58) sterm -> . STRING
    (36) variable -> . LOCAL
    (37) variable -> . GLOBAL
    (38) variable -> . CONSTANTS
    (39) variable -> . INSTANCEVAR
    (40) variable -> . CLASSVAR
    (97) slice -> . variable LBRACK defslice RBRACK
    (96) index -> . variable LBRACK INT RBRACK

    IF              shift and go to state 6
    WHILE           shift and go to state 8
    BEGIN           shift and go to state 7
    FOR             shift and go to state 11
    NUMBER          shift and go to state 5
    FLOAT           shift and go to state 14
    STRING          shift and go to state 18
    LOCAL           shift and go to state 12
    GLOBAL          shift and go to state 24
    CONSTANTS       shift and go to state 19
    INSTANCEVAR     shift and go to state 20
    CLASSVAR        shift and go to state 21

    expr                           shift and go to state 1
    slice                          shift and go to state 13
    if                             shift and go to state 2
    expresiones                    shift and go to state 15
    sterm                          shift and go to state 3
    for                            shift and go to state 16
    term                           shift and go to state 17
    code                           shift and go to state 30
    assign                         shift and go to state 23
    math                           shift and go to state 22
    while                          shift and go to state 9
    index                          shift and go to state 10
    variable                       shift and go to state 25

state 5

    (56) term -> NUMBER .

    THEN            reduce using rule 56 (term -> NUMBER .)
    ANDLOG          reduce using rule 56 (term -> NUMBER .)
    ORLOG           reduce using rule 56 (term -> NUMBER .)
    NOTLOG          reduce using rule 56 (term -> NUMBER .)
    AND             reduce using rule 56 (term -> NUMBER .)
    OR              reduce using rule 56 (term -> NUMBER .)
    NOT             reduce using rule 56 (term -> NUMBER .)
    NUMBER          reduce using rule 56 (term -> NUMBER .)
    FLOAT           reduce using rule 56 (term -> NUMBER .)
    STRING          reduce using rule 56 (term -> NUMBER .)
    LOCAL           reduce using rule 56 (term -> NUMBER .)
    GLOBAL          reduce using rule 56 (term -> NUMBER .)
    CONSTANTS       reduce using rule 56 (term -> NUMBER .)
    INSTANCEVAR     reduce using rule 56 (term -> NUMBER .)
    CLASSVAR        reduce using rule 56 (term -> NUMBER .)
    ELSE            reduce using rule 56 (term -> NUMBER .)
    ELSIF           reduce using rule 56 (term -> NUMBER .)
    IF              reduce using rule 56 (term -> NUMBER .)
    WHILE           reduce using rule 56 (term -> NUMBER .)
    BEGIN           reduce using rule 56 (term -> NUMBER .)
    FOR             reduce using rule 56 (term -> NUMBER .)
    $end            reduce using rule 56 (term -> NUMBER .)
    END             reduce using rule 56 (term -> NUMBER .)
    NEWLINE         reduce using rule 56 (term -> NUMBER .)
    DO              reduce using rule 56 (term -> NUMBER .)
    DOBLEPOINT      reduce using rule 56 (term -> NUMBER .)
    EXP             reduce using rule 56 (term -> NUMBER .)
    MUL             reduce using rule 56 (term -> NUMBER .)
    DIV             reduce using rule 56 (term -> NUMBER .)
    MOD             reduce using rule 56 (term -> NUMBER .)
    ADD             reduce using rule 56 (term -> NUMBER .)
    SUB             reduce using rule 56 (term -> NUMBER .)
    DOUBLESECUENCEPOINT reduce using rule 56 (term -> NUMBER .)
    EQUAL           reduce using rule 56 (term -> NUMBER .)
    NOTEQ           reduce using rule 56 (term -> NUMBER .)
    GREATHER        reduce using rule 56 (term -> NUMBER .)
    LOWER           reduce using rule 56 (term -> NUMBER .)
    GREATHEREQ      reduce using rule 56 (term -> NUMBER .)
    LOWEREQ         reduce using rule 56 (term -> NUMBER .)


state 6

    (70) if -> IF . logical expr END
    (71) if -> IF . logical THEN expr END
    (72) if -> IF . logical
    (73) if -> IF . logical THEN
    (12) logical -> . term comparison term
    (13) logical -> . term comparison logical
    (14) logical -> . variable comparison term
    (15) logical -> . variable comparison boolean
    (16) logical -> . logical logcompare logical
    (17) logical -> . boolean
    (56) term -> . NUMBER
    (57) term -> . FLOAT
    (36) variable -> . LOCAL
    (37) variable -> . GLOBAL
    (38) variable -> . CONSTANTS
    (39) variable -> . INSTANCEVAR
    (40) variable -> . CLASSVAR
    (101) boolean -> . TRUE
    (102) boolean -> . FALSE

    NUMBER          shift and go to state 5
    FLOAT           shift and go to state 14
    LOCAL           shift and go to state 12
    GLOBAL          shift and go to state 24
    CONSTANTS       shift and go to state 19
    INSTANCEVAR     shift and go to state 20
    CLASSVAR        shift and go to state 21
    TRUE            shift and go to state 35
    FALSE           shift and go to state 31

    term                           shift and go to state 32
    logical                        shift and go to state 33
    variable                       shift and go to state 34
    boolean                        shift and go to state 36

state 7

    (11) while -> BEGIN . code END WHILE logical
    (1) code -> . expr
    (2) code -> . if
    (3) code -> . while
    (4) code -> . expresiones
    (5) code -> . for
    (6) code -> . assign
    (7) code -> . code code
    (48) expr -> . math
    (49) expr -> . term
    (50) expr -> . sterm
    (51) expr -> . variable
    (52) expr -> . slice
    (53) expr -> . index
    (70) if -> . IF logical expr END
    (71) if -> . IF logical THEN expr END
    (72) if -> . IF logical
    (73) if -> . IF logical THEN
    (74) if -> . if else
    (75) if -> . if elsif END
    (8) while -> . WHILE logical code END
    (9) while -> . WHILE logical DO salto code salto END
    (10) while -> . WHILE logical DOBLEPOINT salto code salto END
    (11) while -> . BEGIN code END WHILE logical
    (84) expresiones -> . term DOUBLESECUENCEPOINT term
    (65) for -> . FOR iterador IN expresiones code END
    (66) for -> . FOR iterador IN expresiones DO code END
    (67) for -> . FOR iterador IN array code END
    (68) for -> . FOR iterador IN array DO code END
    (30) assign -> . variable ASS expr
    (31) assign -> . variable ASS sexpr
    (32) assign -> . variable ASS array
    (33) math -> . term arith term
    (34) math -> . term arith math
    (35) math -> . variable asig term
    (56) term -> . NUMBER
    (57) term -> . FLOAT
    (58) sterm -> . STRING
    (36) variable -> . LOCAL
    (37) variable -> . GLOBAL
    (38) variable -> . CONSTANTS
    (39) variable -> . INSTANCEVAR
    (40) variable -> . CLASSVAR
    (97) slice -> . variable LBRACK defslice RBRACK
    (96) index -> . variable LBRACK INT RBRACK

    IF              shift and go to state 6
    WHILE           shift and go to state 8
    BEGIN           shift and go to state 7
    FOR             shift and go to state 11
    NUMBER          shift and go to state 5
    FLOAT           shift and go to state 14
    STRING          shift and go to state 18
    LOCAL           shift and go to state 12
    GLOBAL          shift and go to state 24
    CONSTANTS       shift and go to state 19
    INSTANCEVAR     shift and go to state 20
    CLASSVAR        shift and go to state 21

    expr                           shift and go to state 1
    slice                          shift and go to state 13
    if                             shift and go to state 2
    expresiones                    shift and go to state 15
    sterm                          shift and go to state 3
    for                            shift and go to state 16
    term                           shift and go to state 17
    code                           shift and go to state 37
    assign                         shift and go to state 23
    math                           shift and go to state 22
    while                          shift and go to state 9
    index                          shift and go to state 10
    variable                       shift and go to state 25

state 8

    (8) while -> WHILE . logical code END
    (9) while -> WHILE . logical DO salto code salto END
    (10) while -> WHILE . logical DOBLEPOINT salto code salto END
    (12) logical -> . term comparison term
    (13) logical -> . term comparison logical
    (14) logical -> . variable comparison term
    (15) logical -> . variable comparison boolean
    (16) logical -> . logical logcompare logical
    (17) logical -> . boolean
    (56) term -> . NUMBER
    (57) term -> . FLOAT
    (36) variable -> . LOCAL
    (37) variable -> . GLOBAL
    (38) variable -> . CONSTANTS
    (39) variable -> . INSTANCEVAR
    (40) variable -> . CLASSVAR
    (101) boolean -> . TRUE
    (102) boolean -> . FALSE

    NUMBER          shift and go to state 5
    FLOAT           shift and go to state 14
    LOCAL           shift and go to state 12
    GLOBAL          shift and go to state 24
    CONSTANTS       shift and go to state 19
    INSTANCEVAR     shift and go to state 20
    CLASSVAR        shift and go to state 21
    TRUE            shift and go to state 35
    FALSE           shift and go to state 31

    term                           shift and go to state 32
    logical                        shift and go to state 38
    variable                       shift and go to state 34
    boolean                        shift and go to state 36

state 9

    (3) code -> while .

    IF              reduce using rule 3 (code -> while .)
    WHILE           reduce using rule 3 (code -> while .)
    BEGIN           reduce using rule 3 (code -> while .)
    FOR             reduce using rule 3 (code -> while .)
    NUMBER          reduce using rule 3 (code -> while .)
    FLOAT           reduce using rule 3 (code -> while .)
    STRING          reduce using rule 3 (code -> while .)
    LOCAL           reduce using rule 3 (code -> while .)
    GLOBAL          reduce using rule 3 (code -> while .)
    CONSTANTS       reduce using rule 3 (code -> while .)
    INSTANCEVAR     reduce using rule 3 (code -> while .)
    CLASSVAR        reduce using rule 3 (code -> while .)
    END             reduce using rule 3 (code -> while .)
    NEWLINE         reduce using rule 3 (code -> while .)
    $end            reduce using rule 3 (code -> while .)
    ELSE            reduce using rule 3 (code -> while .)
    ELSIF           reduce using rule 3 (code -> while .)


state 10

    (53) expr -> index .

    END             reduce using rule 53 (expr -> index .)
    IF              reduce using rule 53 (expr -> index .)
    WHILE           reduce using rule 53 (expr -> index .)
    BEGIN           reduce using rule 53 (expr -> index .)
    FOR             reduce using rule 53 (expr -> index .)
    NUMBER          reduce using rule 53 (expr -> index .)
    FLOAT           reduce using rule 53 (expr -> index .)
    STRING          reduce using rule 53 (expr -> index .)
    LOCAL           reduce using rule 53 (expr -> index .)
    GLOBAL          reduce using rule 53 (expr -> index .)
    CONSTANTS       reduce using rule 53 (expr -> index .)
    INSTANCEVAR     reduce using rule 53 (expr -> index .)
    CLASSVAR        reduce using rule 53 (expr -> index .)
    $end            reduce using rule 53 (expr -> index .)
    NEWLINE         reduce using rule 53 (expr -> index .)
    ELSE            reduce using rule 53 (expr -> index .)
    ELSIF           reduce using rule 53 (expr -> index .)


state 11

    (65) for -> FOR . iterador IN expresiones code END
    (66) for -> FOR . iterador IN expresiones DO code END
    (67) for -> FOR . iterador IN array code END
    (68) for -> FOR . iterador IN array DO code END
    (82) iterador -> . variable
    (83) iterador -> . variable COMA variable
    (36) variable -> . LOCAL
    (37) variable -> . GLOBAL
    (38) variable -> . CONSTANTS
    (39) variable -> . INSTANCEVAR
    (40) variable -> . CLASSVAR

    LOCAL           shift and go to state 12
    GLOBAL          shift and go to state 24
    CONSTANTS       shift and go to state 19
    INSTANCEVAR     shift and go to state 20
    CLASSVAR        shift and go to state 21

    variable                       shift and go to state 40
    iterador                       shift and go to state 39

state 12

    (36) variable -> LOCAL .

    ASS             reduce using rule 36 (variable -> LOCAL .)
    LBRACK          reduce using rule 36 (variable -> LOCAL .)
    ADDASS          reduce using rule 36 (variable -> LOCAL .)
    SUBASS          reduce using rule 36 (variable -> LOCAL .)
    MULASS          reduce using rule 36 (variable -> LOCAL .)
    DIVASS          reduce using rule 36 (variable -> LOCAL .)
    MODASS          reduce using rule 36 (variable -> LOCAL .)
    EXPASS          reduce using rule 36 (variable -> LOCAL .)
    IF              reduce using rule 36 (variable -> LOCAL .)
    WHILE           reduce using rule 36 (variable -> LOCAL .)
    BEGIN           reduce using rule 36 (variable -> LOCAL .)
    FOR             reduce using rule 36 (variable -> LOCAL .)
    NUMBER          reduce using rule 36 (variable -> LOCAL .)
    FLOAT           reduce using rule 36 (variable -> LOCAL .)
    STRING          reduce using rule 36 (variable -> LOCAL .)
    LOCAL           reduce using rule 36 (variable -> LOCAL .)
    GLOBAL          reduce using rule 36 (variable -> LOCAL .)
    CONSTANTS       reduce using rule 36 (variable -> LOCAL .)
    INSTANCEVAR     reduce using rule 36 (variable -> LOCAL .)
    CLASSVAR        reduce using rule 36 (variable -> LOCAL .)
    $end            reduce using rule 36 (variable -> LOCAL .)
    END             reduce using rule 36 (variable -> LOCAL .)
    NEWLINE         reduce using rule 36 (variable -> LOCAL .)
    ELSE            reduce using rule 36 (variable -> LOCAL .)
    ELSIF           reduce using rule 36 (variable -> LOCAL .)
    COMA            reduce using rule 36 (variable -> LOCAL .)
    IN              reduce using rule 36 (variable -> LOCAL .)
    EQUAL           reduce using rule 36 (variable -> LOCAL .)
    NOTEQ           reduce using rule 36 (variable -> LOCAL .)
    GREATHER        reduce using rule 36 (variable -> LOCAL .)
    LOWER           reduce using rule 36 (variable -> LOCAL .)
    GREATHEREQ      reduce using rule 36 (variable -> LOCAL .)
    LOWEREQ         reduce using rule 36 (variable -> LOCAL .)


state 13

    (52) expr -> slice .

    END             reduce using rule 52 (expr -> slice .)
    IF              reduce using rule 52 (expr -> slice .)
    WHILE           reduce using rule 52 (expr -> slice .)
    BEGIN           reduce using rule 52 (expr -> slice .)
    FOR             reduce using rule 52 (expr -> slice .)
    NUMBER          reduce using rule 52 (expr -> slice .)
    FLOAT           reduce using rule 52 (expr -> slice .)
    STRING          reduce using rule 52 (expr -> slice .)
    LOCAL           reduce using rule 52 (expr -> slice .)
    GLOBAL          reduce using rule 52 (expr -> slice .)
    CONSTANTS       reduce using rule 52 (expr -> slice .)
    INSTANCEVAR     reduce using rule 52 (expr -> slice .)
    CLASSVAR        reduce using rule 52 (expr -> slice .)
    $end            reduce using rule 52 (expr -> slice .)
    NEWLINE         reduce using rule 52 (expr -> slice .)
    ELSE            reduce using rule 52 (expr -> slice .)
    ELSIF           reduce using rule 52 (expr -> slice .)


state 14

    (57) term -> FLOAT .

    THEN            reduce using rule 57 (term -> FLOAT .)
    ANDLOG          reduce using rule 57 (term -> FLOAT .)
    ORLOG           reduce using rule 57 (term -> FLOAT .)
    NOTLOG          reduce using rule 57 (term -> FLOAT .)
    AND             reduce using rule 57 (term -> FLOAT .)
    OR              reduce using rule 57 (term -> FLOAT .)
    NOT             reduce using rule 57 (term -> FLOAT .)
    NUMBER          reduce using rule 57 (term -> FLOAT .)
    FLOAT           reduce using rule 57 (term -> FLOAT .)
    STRING          reduce using rule 57 (term -> FLOAT .)
    LOCAL           reduce using rule 57 (term -> FLOAT .)
    GLOBAL          reduce using rule 57 (term -> FLOAT .)
    CONSTANTS       reduce using rule 57 (term -> FLOAT .)
    INSTANCEVAR     reduce using rule 57 (term -> FLOAT .)
    CLASSVAR        reduce using rule 57 (term -> FLOAT .)
    ELSE            reduce using rule 57 (term -> FLOAT .)
    ELSIF           reduce using rule 57 (term -> FLOAT .)
    IF              reduce using rule 57 (term -> FLOAT .)
    WHILE           reduce using rule 57 (term -> FLOAT .)
    BEGIN           reduce using rule 57 (term -> FLOAT .)
    FOR             reduce using rule 57 (term -> FLOAT .)
    $end            reduce using rule 57 (term -> FLOAT .)
    END             reduce using rule 57 (term -> FLOAT .)
    NEWLINE         reduce using rule 57 (term -> FLOAT .)
    DO              reduce using rule 57 (term -> FLOAT .)
    DOBLEPOINT      reduce using rule 57 (term -> FLOAT .)
    EXP             reduce using rule 57 (term -> FLOAT .)
    MUL             reduce using rule 57 (term -> FLOAT .)
    DIV             reduce using rule 57 (term -> FLOAT .)
    MOD             reduce using rule 57 (term -> FLOAT .)
    ADD             reduce using rule 57 (term -> FLOAT .)
    SUB             reduce using rule 57 (term -> FLOAT .)
    DOUBLESECUENCEPOINT reduce using rule 57 (term -> FLOAT .)
    EQUAL           reduce using rule 57 (term -> FLOAT .)
    NOTEQ           reduce using rule 57 (term -> FLOAT .)
    GREATHER        reduce using rule 57 (term -> FLOAT .)
    LOWER           reduce using rule 57 (term -> FLOAT .)
    GREATHEREQ      reduce using rule 57 (term -> FLOAT .)
    LOWEREQ         reduce using rule 57 (term -> FLOAT .)


state 15

    (4) code -> expresiones .

    IF              reduce using rule 4 (code -> expresiones .)
    WHILE           reduce using rule 4 (code -> expresiones .)
    BEGIN           reduce using rule 4 (code -> expresiones .)
    FOR             reduce using rule 4 (code -> expresiones .)
    NUMBER          reduce using rule 4 (code -> expresiones .)
    FLOAT           reduce using rule 4 (code -> expresiones .)
    STRING          reduce using rule 4 (code -> expresiones .)
    LOCAL           reduce using rule 4 (code -> expresiones .)
    GLOBAL          reduce using rule 4 (code -> expresiones .)
    CONSTANTS       reduce using rule 4 (code -> expresiones .)
    INSTANCEVAR     reduce using rule 4 (code -> expresiones .)
    CLASSVAR        reduce using rule 4 (code -> expresiones .)
    END             reduce using rule 4 (code -> expresiones .)
    NEWLINE         reduce using rule 4 (code -> expresiones .)
    $end            reduce using rule 4 (code -> expresiones .)
    ELSE            reduce using rule 4 (code -> expresiones .)
    ELSIF           reduce using rule 4 (code -> expresiones .)


state 16

    (5) code -> for .
